point canary to release

--- a/.github/workflows/canary-test.yml
+++ b/.github/workflows/canary-test.yml
@@ -4,6 +4,9 @@ description: This test verifies the connection between the agent and the MCPs. I
 on:
   schedule:
     - cron: '0 * * * *'  # every hour
+  push:
+    branches:
+      - canary-patch
 
 env:
   AWS_DEFAULT_REGION: us-east-1
@@ -28,7 +31,7 @@ jobs:
 
       - name: Prepare Investigation Context
         id: prepare
-        uses: ./
+        uses: aws-actions/application-observability-for-aws@v1
         with:
           test_mode: "true"
           custom_prompt: "Use the list_monitored_services tool to show me all services currently monitored by AWS Application Signals. Also use the get_active_alarms tool to show me all active CloudWatch alarms."
